# fastify

./: README.md  fastify  pyproject.toml
examples/car-app/api/: router.py
examples/car-app/api/routes/: cars.py
examples/car-app/db/services/: cars.py
examples/car-app/db/tables/: cars.py
examples/car-app/schemas/: cars.py
lib/: errors.py  fastify.py
lib/templates/: db_tables_base.py.tmpl  main_app.py.tmpl  router.py.tmpl  routes.py.tmpl  schemas.py.tmpl  services.py.tmpl  tables.py.tmpl
